--- a/server/package.json
+++ b/server/package.json
@@ -17,9 +17,18 @@
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
     "@types/express": "^4.17.8",
+    "@typescript-eslint/eslint-plugin": "^4.4.1",
+    "@typescript-eslint/parser": "^4.4.1",
     "commitizen": "^4.2.1",
     "cz-conventional-changelog": "3.3.0",
+    "eslint": "6.8.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-config-prettier": "^6.12.0",
+    "eslint-import-resolver-typescript": "^2.3.0",
+    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-prettier": "^3.1.4",
     "husky": "^4.3.0",
+    "prettier": "^2.1.2",
     "typescript": "^4.0.3"
   },
   "config": {
