feat(server): add typeorm and config to project
This config an orm for application for database postgres

--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -31,5 +31,10 @@
           "ts": "never"
         }
       ]
+    },
+    "settings": {
+      "import/resolver": {
+        "typescript": {}
+      }
     }
 }
