--- a/server/package.json
+++ b/server/package.json
@@ -38,6 +38,8 @@
     }
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "pg": "^8.4.1",
+    "typeorm": "^0.2.28"
   }
 }
